# user-crud-fullstack

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: dependencies.py  errors.py
backend/app/api/endpoints/: users.py
backend/app/api/v1/endpoints/: auth.py  users.py
backend/app/core/: config.py  database.py  exceptions.py  security.py  setup.py
backend/app/models/: user.py
backend/app/repositories/: user_repository.py
backend/app/schemas/: auth.py  user.py
backend/app/services/: auth_service.py  user_service.py
backend/scripts/: seed_db.py
backend/tests/: conftest.py
backend/tests/integration/: test_users.py
frontend/: .dockerignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/api/: axios.ts
frontend/src/components/: ModalTemplate.tsx  Sidebar.tsx  UserModal.tsx
frontend/src/components/layouts/: Sidebar.tsx
frontend/src/components/templates/: ConfirmDialog.tsx
frontend/src/features/auth/api/: auth.service.ts  authAxios.ts
frontend/src/features/auth/components/: LoginForm.tsx  ProtectedRoute.tsx  RegisterForm.tsx
frontend/src/features/auth/context/: AuthContext.tsx
frontend/src/features/auth/hooks/: useAuth.ts
frontend/src/features/auth/types/: types.ts
frontend/src/features/users/api/: axios.ts  (+1 more)
frontend/src/lib/: setupAxiosInterceptors.ts
frontend/src/pages/: Dashboard.tsx  LoginPage.tsx  RegisterPage.tsx  Users.tsx
(+10 files in other folders)
